Logo now bg image + aligned right so margin is correct

--- a/voteit/core/css/main.css
+++ b/voteit/core/css/main.css
@@ -26,7 +26,7 @@
 }
 #header-user-actions {
 	float: left;
-	width: 220px;
+	width: 230px;
 	overflow:hidden;
 	margin-right: 10px;
 }
@@ -38,10 +38,12 @@
 	clear: right;
 	font-size: 16px;
 }
-
 #header-logo {
 	float: left;
-	width: 120px;
+	display:block;
+	width: 110px;
+	height: 50px;
+	background: url(/static/images/voteit_logo.png) right top no-repeat;
 }
 /* End top header section */
 
